// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DelightfulEllipseWithTooltip > Snapshot tests > basic ellipsis text snapshot 1`] = `
<DocumentFragment>
  <div
    aria-describedby="test-id"
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 100px;"
  >
    Test content
  </div>
</DocumentFragment>
`;

exports[`DelightfulEllipseWithTooltip > Snapshot tests > with custom class snapshot 1`] = `
<DocumentFragment>
  <div
    aria-describedby="test-id"
    class="custom-ellipse"
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 100px;"
  >
    Test content
  </div>
</DocumentFragment>
`;

exports[`DelightfulEllipseWithTooltip > Snapshot tests > with custom style snapshot 1`] = `
<DocumentFragment>
  <div
    aria-describedby="test-id"
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 100px;"
  >
    Test content
  </div>
</DocumentFragment>
`;

exports[`DelightfulEllipseWithTooltip > Snapshot tests > empty text snapshot 1`] = `
<DocumentFragment>
  <div
    aria-describedby="test-id"
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 100px;"
  />
</DocumentFragment>
`;

exports[`DelightfulEllipseWithTooltip > Snapshot tests > custom max width snapshot 1`] = `
<DocumentFragment>
  <div
    aria-describedby="test-id"
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 200px;"
  >
    Test content
  </div>
</DocumentFragment>
`;

exports[`DelightfulEllipseWithTooltip > Snapshot tests > long text ellipsis snapshot 1`] = `
<DocumentFragment>
  <div
    aria-describedby="test-id"
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 100px;"
  >
    This is a very long text content that should be displayed with ellipsis
  </div>
</DocumentFragment>
`;
